more work on multimat poster

--- a/transport/doc/multimat_2015/content/conclusions.tex
+++ b/transport/doc/multimat_2015/content/conclusions.tex
@@ -1,4 +1,4 @@
-In conclusion, the FCT scheme presented in this paper guarantees
+In conclusion, the FCT scheme presented guarantees
 a non-negative solution that satisfies a discrete maximum principle.
 While this FCT scheme does not guarantee monotonicity, it has been
 found to be successful in many simple test problems. The underlying
