--- a/transport/doc/multimat_2015/poster.tex
+++ b/transport/doc/multimat_2015/poster.tex
@@ -8,65 +8,138 @@
 \setlength{\tabcolsep}{2em}
 
 % title, author, and institution
-\title{\fontsize{25pt}{1em} An Explicit, Positive CFEM Scheme Based on FCT}
+\title{\fontsize{100pt}{1em}\selectfont\hspace{-3em} An Explicit, Positive CFEM Scheme Based on FCT}
 \author{\begin{tabular}{c c c}
   Jean C. Ragusa       & Jean-Luc Guermond      & Joshua E. Hansel\\
   jean.ragusa@tamu.edu & guermond@math.tamu.edu & joshhansel@tamu.edu\\
   Texas A\&M University & Texas A\&M University & Texas A\&M University
 \end{tabular}}
 
+% custom background style
 \definebackgroundstyle{mybackground}{
   \node[at=(current page.center)] at (0,0) {\includegraphics[height=\textheight]{figures/blue_gradient.png}};
+}
+
+% custom block style
+\defineblockstyle{myblockstyle}{
+  titlewidthscale=1.0, bodywidthscale=1, titlecenter,
+  titleoffsetx=0pt, titleoffsety=0pt, bodyoffsetx=0mm, bodyoffsety=15mm,
+  bodyverticalshift=10mm, roundedcorners=0, linewidth=0pt,
+  titleinnersep=6mm, bodyinnersep=1cm
+}{
+  \draw[color=framecolor, fill=blockbodybgcolor,
+  rounded corners=\blockroundedcorners, line width=\blocklinewidth] (blockbody.south west)
+  rectangle (blockbody.north east);
+  \ifBlockHasTitle
+    \draw[color=framecolor, fill=blocktitlebgcolor,
+    rounded corners=\blockroundedcorners, line width=\blocklinewidth] (blocktitle.south west)
+    rectangle (blocktitle.north east);
+  \fi
+}
+
+% custom color style
+\definecolorstyle{mycolorstyle} {
+  \definecolor{colorOne}{named}{green}
+  \colorlet{colorTwo}{black!45!white!45!blue}
+  \colorlet{colorThree}{red}
+}{
+  % Background Colors
+  \colorlet{backgroundcolor}{colorOne}
+  \colorlet{framecolor}{colorTwo}
+  % Title Colors
+  \colorlet{titlefgcolor}{white}
+  \colorlet{titlebgcolor}{colorOne}
+  % Block Colors
+  \colorlet{blocktitlebgcolor}{colorTwo}
+  \colorlet{blocktitlefgcolor}{white}
+  \colorlet{blockbodybgcolor}{white}
+  \colorlet{blockbodyfgcolor}{black}
+  % Innerblock Colors
+  \colorlet{innerblocktitlebgcolor}{white}
+  \colorlet{innerblocktitlefgcolor}{black}
+  \colorlet{innerblockbodybgcolor}{colorThree!30!white}
+  \colorlet{innerblockbodyfgcolor}{black}
+  % Note colors
+  \colorlet{notefgcolor}{black}
+  \colorlet{notebgcolor}{colorTwo!50!white}
+  \colorlet{noteframecolor}{colorTwo}
 }
 
 % theme and style and colors
 \usetheme{Autumn} % Default, Rays, Basic, Simple, Envelope, Wave, Board, Autumn, and Desert
 \usebackgroundstyle{mybackground} % Default, Rays, VerticalGradation, BottomVerticalGradation, Empty
-\usecolorstyle[colorOne=blue,colorTwo=black!10!blue!20,colorThree=blue!90!black]{Russia} % Default, Australia, Britain, Sweden, Spain, Russia, Denmark, Germany
+\usecolorstyle{mycolorstyle} % Default, Australia, Britain, Sweden, Spain, Russia, Denmark, Germany
 \usetitlestyle{Empty} % Default, Basic, Envelope, Wave, VerticalShading, Filled, Empty
-\useblockstyle{Slide} % Default, Basic, Minimal, Envelope, Corner, Slide, TornOut
+\useblockstyle{myblockstyle} % Default, Basic, Minimal, Envelope, Corner, Slide, TornOut
 
 % document
+%--------------------------------------------------------------------------------
 \begin{document}\maketitle
 \begin{columns}
 
 % FIRST COLUMN
 \column{0.25}
-  \block{Introduction}{
+  \block{\centering INTRODUCTION}{
     \setlength{\parskip}{\baselineskip}
     \vspace{-\parskip}
     \input{content/introduction}
   }
-  \block{Methodology}{
+  \block{\centering DISCRETIZATION}{
     \setlength{\parskip}{\baselineskip}
     \vspace{-\parskip}
-    \input{content/methodology}
+    \input{content/discretization}
+  }
+  \block{\centering LOW-ORDER SCHEME}{
+    \setlength{\parskip}{\baselineskip}
+    \vspace{-\parskip}
+    \input{content/low_order_scheme}
   }
 
 % SECOND COLUMN
 \column{0.25}
+  \block{\centering HIGH-ORDER SCHEME}{
+    \setlength{\parskip}{\baselineskip}
+    \vspace{-\parskip}
+    \input{content/high_order_scheme}
+  }
+  \block{\centering FCT SCHEME}{
+    \setlength{\parskip}{\baselineskip}
+    \vspace{-\parskip}
+    \input{content/fct_scheme}
+  }
 
 % THIRD COLUMN
 \column{0.25}
+  \block{\centering RESULTS}{
+    \setlength{\parskip}{\baselineskip}
+    \vspace{-\parskip}
+    \input{content/results1}
+  }
 
 % FOURTH COLUMN
 \column{0.25}
-  \block{Results}{
+  \block{}{
     \setlength{\parskip}{\baselineskip}
     \vspace{-\parskip}
-    \input{content/results}
+    \input{content/results2}
   }
-  \block{Conclusions}{
+  \block{\centering CONCLUSIONS}{
+    \setlength{\parskip}{\baselineskip}
+    \vspace{-\parskip}
     \input{content/conclusions}
   }
-  \block{References}{
+  \block{\centering REFERENCES}{
     \begin{center}
       \mbox{}\vspace{-\baselineskip}
       \printbibliography[heading=none]
     \end{center}
   }
-
-
-
+  \block{}{
+    \setlength{\parskip}{\baselineskip}
+    \vspace{-2\parskip}
+    \begin{center}
+      \includegraphics[width=0.2\textwidth]{figures/neup_logo.jpg}
+    \end{center}
+  }
 \end{columns}
 \end{document}
