--- a/euler/README
+++ b/euler/README
@@ -1,26 +1,37 @@
 Solving conservation law problems with entropy viscosity and FCT
 
+=================================================================================
 To run:
 =================================================================================
-1. edit TARGET in CMakeLists.txt to correspond to the conservation law
+1. Edit TARGET in CMakeLists.txt to correspond to the conservation law
    for which you wish to run, e.g., "burgers" or "euler".
 
-2. run cmake:
+2. Run cmake:
 
-   cmake -DDEAL_II_DIR=~/bin/deal.II .
+   $ cmake -DDEAL_II_DIR=~/bin/deal.II .
 
    Replace ~/bin/deal.II with the appropriate path if deal.II is not installed
    there.
 
-3. run make:
+3. Run make:
 
-   make
+   $ make
 
-4. edit the input file corresponding to the conservation law for which you
+4. Edit the input file corresponding to the conservation law for which you
    wish to run, e.g., "input_burgers" or "input_euler".
 
-5. run the executable created by make, e.g., "burgers" or "euler".
+5. Run the executable created by make, e.g., "burgers" or "euler".
 
 
+=================================================================================
 To plot 1-D results:
 =================================================================================
+Run the script "plot":
+
+$ plot
+
+This script calls the script "plot_explicit" with arguments inferred by the
+contents of CMakeLists.txt and the appropriate input file. To call
+"plot_explicit" directly, call it without arguments to see the correct usage.
+
+
